--- a/README.rdoc
+++ b/README.rdoc
@@ -1,6 +1,6 @@
 = fcgi - FastCGI library for Ruby
 
-Version 0.8.9
+Version 0.9.0
 
 == Depends
 
@@ -12,11 +12,9 @@ Version 0.8.9
 
 == Install
 
-  $ ruby install.rb config
-    (Pure Ruby Version: ruby install.rb config --without-ext)
-    (Some systems need: ruby install.rb config -- --with-fcgi-include=/usr/local/include --with-fcgi-lib=/usr/local/lib)
-  $ ruby install.rb setup
-  # ruby install.rb install
+  $ gem install fcgi
+    (Pure Ruby Version: gem install fcgi -- --without-ext)
+    (With custom FCGI lib paths: gem install fcgi -- --with-fcgi-include=/usr/local/include --with-fcgi-lib=/usr/local/lib)
 
 == Usage
 === Class Method
@@ -42,7 +40,6 @@ Version 0.8.9
     used in this way, as it dynamically adds a large number of methods
     to itself each time a new instance is created.
 
-
 === Instance Method
 --- FCGI#finish
     Finish
@@ -60,6 +57,7 @@ Version 0.8.9
     Returns Environment(Hash)
 
 == Sample
+
 Using the FastCGI native interface:
 
   #!/usr/bin/ruby
